--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="main.js"></script>
+    <link href="index.css" rel="stylesheet">
   </head>
   <body>
     <main>
