--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <script src="/lib/p5.min.js"></script>
     <script src="main.js"></script>
     <link href="index.css" rel="stylesheet">
   </head>
