--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="/lib/p5.min.js"></script>
+    <script src="/lib/addons/p5.sound.min.js"></script>
     <script src="main.js"></script>
     <link href="index.css" rel="stylesheet">
   </head>
