--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
+
     <script src="/lib/p5.min.js"></script>
     <script src="/lib/addons/p5.sound.min.js"></script>
     <script src="main.js"></script>
     <link href="index.css" rel="stylesheet">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
   </head>
   <body>
-    <main>
-    </main>
+    <div class="container-fluid">
+    <div class="row">
+      <div id="yesover" class="col-sm-6 left">
+
+        <p class="text-center pt-5 pl-1"> Given an integer array nums, design an algorithm to randomly shuffle the array.
+
+            Implement the Solution class:
+            
+            Solution(int[] nums) Initializes the object with the integer array nums.
+            int[] reset() Resets the array to its original configuration and returns it.
+            int[] shuffle() Returns a random shuffling of the array.
+            Implement the Solution class:
+            
+            Solution(int[] nums) Initializes the object with the integer array nums.
+            int[] reset() Resets the array to its original configuration and returns it.
+            int[] shuffle() Returns a random shuffling of the array.
+            Given an integer array nums, design an algorithm to randomly shuffle the array. Implement the Solution class: Solution(int[] nums) Initializes the object with the integer array nums. int[] reset() Resets the array to its original configuration and returns it. int[] shuffle() Returns a random shuffling of the array.
+            Given an integer array nums, design an algorithm to randomly shuffle the array. Implement the Solution class: Solution(int[] nums) Initializes the object with the integer array nums. int[] reset() Resets the array to its original configuration and returns it. int[] shuffle() Returns a random shuffling of the array.</p>
+      </div>
+      <div class="col-sm-6 right">
+        <div id="canvasElm"></div>
+      </div>
+    </div>
+  </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
