added further UI changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div class="container-fluid">
     <div class="row">
       <div id="yesover" class="col-sm-6 left">
-
+        <h1 class="text-center pt-5 pl-1">
+          Problem 1
+        </h1>
         <p class="text-center pt-5 pl-1"> Given an integer array nums, design an algorithm to randomly shuffle the array.
 
             Implement the Solution class:
