--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
     <script src="/lib/p5.min.js"></script>
     <script src="/lib/addons/p5.sound.min.js"></script>
-    <script src="main.js"></script>
-    <link href="index.css" rel="stylesheet">
+    <script src="/main.js"></script>
+    <link href="/index.css" rel="stylesheet">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
