--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Algorithms learning game!">
   <meta name="author" content="@arshiyasolei , @bobyboby">
 
-  <link rel="stylesheet" href="/about.css">
+  <link rel="stylesheet" href="https://bobbysinclusto.github.io/hacky-heap/about.css">
 
 </head>
 
