removed github pages dependencies to make this easier to debug

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
 
-    <script src="https://bobbysinclusto.github.io/hacky-heap/lib/p5.min.js"></script>
-    <script src="https://bobbysinclusto.github.io/hacky-heap/lib/addons/p5.sound.min.js"></script>
-    <script src="https://bobbysinclusto.github.io/hacky-heap/main.js"></script>
-    <link href="https://bobbysinclusto.github.io/hacky-heap/index.css" rel="stylesheet">
+    <script src="lib/p5.min.js"></script>
+    <script src="lib/addons/p5.sound.min.js"></script>
+    <script src="main.js"></script>
+    <link href="index.css" rel="stylesheet">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
