--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>LeetGraph</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
   </head>
   <body>
     <div class="container-fluid">
