--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <script src="lib/p5.min.js"></script>
     <script src="lib/addons/p5.sound.min.js"></script>
+    <script src="predefinedlevels.js"></script>
     <script src="main.js"></script>
     <link href="index.css" rel="stylesheet">
 
