--- a/about.html
+++ b/about.html
@@ -14,9 +14,13 @@
 
 <body>
   <div class="name">
-    <h1> Algorithm Game!</h1>
+    <h1> LeetGraph</h1>
     <p>This is a very fun game that you can play with your friends! </p>
+
+    <button id="playGame">Play the game</button>
+    <br><br>
     <button id="downloadResumes">Download a copy of our resumes</button>
+    
 
   </div>
   <canvas id="mainCanvas" width="400" height="100"></canvas>
