--- a/game.html
+++ b/game.html
@@ -2,10 +2,6 @@
 <html lang="en">
   <head>
 
-    <script src="lib/p5.min.js"></script>
-    <script src="lib/addons/p5.sound.min.js"></script>
-    <script src="predefinedlevels.js"></script>
-    <script src="main.js"></script>
     <link href="game.css" rel="stylesheet">
 
     <meta charset="utf-8">
@@ -24,20 +20,9 @@
         <h1 id="problemH1" class="text-center pt-5 pl-1">
           Problem 1
         </h1>
-        <p id="problemText" class="text-center pt-5 pl-1"> Given an integer array nums, design an algorithm to randomly shuffle the array.
-
-            Implement the Solution class:
-            
-            Solution(int[] nums) Initializes the object with the integer array nums.
-            int[] reset() Resets the array to its original configuration and returns it.
-            int[] shuffle() Returns a random shuffling of the array.
-            Implement the Solution class:
-            
-            Solution(int[] nums) Initializes the object with the integer array nums.
-            int[] reset() Resets the array to its original configuration and returns it.
-            int[] shuffle() Returns a random shuffling of the array.
-            Given an integer array nums, design an algorithm to randomly shuffle the array. Implement the Solution class: Solution(int[] nums) Initializes the object with the integer array nums. int[] reset() Resets the array to its original configuration and returns it. int[] shuffle() Returns a random shuffling of the array.
-            Given an integer array nums, design an algorithm to randomly shuffle the array. Implement the Solution class: Solution(int[] nums) Initializes the object with the integer array nums. int[] reset() Resets the array to its original configuration and returns it. int[] shuffle() Returns a random shuffling of the array.</p>
+        <p id="problemText" class="text-center pt-5 pl-1"> 
+            Use the block abstractions to sort a list!
+            For example [2,3,1,4] should be sorted to [1,2,3,4]</p>
       </div>
       <div id = "rightCol" class="col-sm-6 right">
         <div id="canvasElm"></div>
@@ -45,8 +30,11 @@
       </div>
     </div>
   </div>
-
+  <script src="lib/p5.min.js"></script>
+  <script src="lib/addons/p5.sound.min.js"></script>
+  <script src="predefinedlevels.js"></script>
+  <script src="main.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
