Added loading screens

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+  <div id="overlay-thingy">
+    <div class="loader"></div>
+  </div>
+  <link rel="stylesheet" href="index.css">
   <div class="name">
     <h1> LeetGraph</h1>
     <p>This is a very fun game that you can play with your friends! </p>
@@ -30,7 +34,6 @@
     integrity="sha512-Q+IG0h7As6sfqE2t1Xf5IeamNyCXb4EXxGCA9Mlbpv7xtwurVHNdVDbyWeSQ3ulPf2FRlqeu77Ec3SJDdIR63w=="
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.net.min.js"></script>
-
 </body>
 
 </html>
