--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="@arshiyasolei , @bobbysinclusto">
 
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/png" href="favicon.png" />
 
 </head>
 
