--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Algorithms learning game!">
   <meta name="author" content="@arshiyasolei , @bobbysinclusto">
 
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="https://bobbysinclusto.github.io/hacky-heap/index.css">
+  <link rel="icon" type="image/png" href="https://bobbysinclusto.github.io/hacky-heap/favicon.png" />
 
 </head>
 
@@ -17,7 +17,7 @@
   <div id="overlay-thingy">
     <div class="loader"></div>
   </div>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://bobbysinclusto.github.io/hacky-heap/index.css">
   <div class="name">
     <h1> LeetGraph</h1>
     <p>This is a very fun game that you can play with your friends! </p>
@@ -30,7 +30,7 @@
   </div>
   <canvas id="mainCanvas" width="400" height="100"></canvas>
   <div id="interactive"></div>
-  <script src="index.js"></script>
+  <script src="https://bobbysinclusto.github.io/hacky-heap/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"
     integrity="sha512-Q+IG0h7As6sfqE2t1Xf5IeamNyCXb4EXxGCA9Mlbpv7xtwurVHNdVDbyWeSQ3ulPf2FRlqeu77Ec3SJDdIR63w=="
     crossorigin="anonymous"></script>
