--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <link href="https://bobbysinclusto.github.io/hacky-heap/game.css" rel="stylesheet">
+    <link href="http://leetgraph.tech/game.css" rel="stylesheet">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>LeetGraph</title>
-    <link rel="icon" type="image/png" href="https://bobbysinclusto.github.io/hacky-heap/favicon.png" />
+    <link rel="icon" type="image/png" href="http://leetgraph.tech/favicon.png" />
   </head>
   <body>
     <div class="container-fluid">
@@ -30,9 +30,9 @@
       </div>
     </div>
   </div>
-  <script src="https://bobbysinclusto.github.io/hacky-heap/lib/p5.min.js"></script>
-  <script src="https://bobbysinclusto.github.io/hacky-heap/predefinedlevels.js"></script>
-  <script src="https://bobbysinclusto.github.io/hacky-heap/main.js"></script>
+  <script src="http://leetgraph.tech/lib/p5.min.js"></script>
+  <script src="http://leetgraph.tech/predefinedlevels.js"></script>
+  <script src="http://leetgraph.tech/main.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <div id="overlay-thingy">
