--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Algorithms learning game!">
   <meta name="author" content="@arshiyasolei , @bobbysinclusto">
 
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="http://leetgraph.tech/index.css">
+  <link rel="icon" type="image/png" href="http://leetgraph.tech/favicon.png" />
 
 </head>
 
